# simsuite

c/src/: integrators.c  integrators.h  main.c  systems.c  systems.h
cpp/: CMakeLists.txt
cpp/include/: DoublePendulum.h  Integrator.h  System.h
cpp/src/: DoublePendulum.cpp  Integrator.cpp  main.cpp
data/: pendulum_data_0.csv  pendulum_data_1.csv  pendulum_data_10.csv  pendulum_data_11.csv  pendulum_data_12.csv  pendulum_data_13.csv  pendulum_data_14.csv  pendulum_data_15.csv  pendulum_data_2.csv  pendulum_data_3.csv  pendulum_data_4.csv  pendulum_data_5.csv  pendulum_data_6.csv  pendulum_data_7.csv  pendulum_data_8.csv  pendulum_data_9.csv
python/scripts/: all_curves.py  all_time_series.py  analyze_std_mean.py  stds.py  time_series.py
